k8s/weather-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-service
  labels:
    app: weather-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-service
  template:
    metadata:
      labels:
        app: weather-service
    spec:
      containers:
      - name: weather-service
        image: acrweatherdemo.azurecr.io/weather-service:latest
        ports:
        - containerPort: 8080
