k8s/weather-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  type: LoadBalancer
  selector:
    app: weather-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
